# mishka

./: .rust-analyzer.json  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: cli.rs  datafusion.rs  format.rs  lib.rs  main.rs  polars.rs  utils.rs
src/format/: datafusion.rs  mod.rs  polars.rs
