[package]
name = "mishka"
version = "1.0.0-beta.3"
edition = "2024"
description = "Utility to scan data files"
license = "BSL-1.0"
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md"
]

repository = "https://github.com/DoumanAsh/mishka"
readme = "README.md"

[[bin]]
name = "mishka"
required-features = ["cli"]

[dependencies.arg]
version = "0.4"
features = ["std"]
optional = true

### Polars
# Temporarily to fix build of polars-lazy until next version
[dependencies.polars-expr]
version = "0.52"
default-features = false
optional = true
features = ["timezones"]

[dependencies.polars]
version = "0.52"
default-features = false
optional = true
features = [
    # lazy and streaming engine helps to minimize RAM usage
    "lazy", "new_streaming",
    # functional features
    "is_in", "zip_with", "is_first_distinct", "is_last_distinct", "is_between", "unique_counts",
    "row_hash", "diagonal_concat", "partition_by",
    # formats
    "csv", "parquet", "decompress",
    # performance optimization
    "performant", "bigidx", "cse",
    # timestamp types
    "dtype-slim",
]

### Datafusion
[dependencies.object_store]
version = "0.12"
default-features = false
optional = true

[dependencies.datafusion]
version = "51"
default-features = false
optional = true
features = ["parquet"]

[dependencies.tokio]
version = "1"
default-features = false
features = ["rt"]
optional = true

[dependencies.url]
version = "2"
default-features = false
optional = true

[dependencies.futures-util]
version = "0.3"
default-features = false
optional = true

[features]
#default = ["cli", "datafusion", "aws"]
# TODO: you might need to add aws/gcp to object_store in case of datafusion
cli = ["arg", "tokio?/net", "tokio?/time"]
# cloud features
# AWS requires to populate environment variable (e.g. via aws configure export-credentials --format env)
aws = ["polars?/aws", "object_store?/aws"]
gcp = ["polars?/gcp", "object_store?/gcp"]
polars = ["dep:polars", "polars-expr"]
datafusion = ["dep:datafusion", "tokio", "futures-util", "object_store", "url"]

[profile.release]
lto = 'thin'
opt-level = 3
codegen-units = 1
strip = true
debug = false
